--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,3 +5,8 @@ repository:
   topics: homebrew
   allow_auto_merge: true
   private: false
+branches:
+  - name: master
+    protection:
+      required_pull_request_reviews: null
+      required_status_checks: null
